--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -1,5 +1,5 @@
 <div id="temp-checkout">
-    <div class="content-area">
+    <div id="content-area">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12 box-default" ng-if="Payment.shiping">
@@ -10,12 +10,12 @@
                         <table class="table">
                             <tbody>
                             <tr>
-                                <td><strong>Estado:</strong> {{Payment.addresship.stateName}}.</td>
-                                <td><strong>Ciudad:</strong> {{Payment.addresship.cityName}}.</td>
+                                <td><strong>Estado:</strong> {{Payment.addresship.stateName}}</td>
+                                <td><strong>Ciudad:</strong> {{Payment.addresship.cityName}}</td>
                                 <td><strong>Dirección:</strong> {{Payment.addresship.address}},
-                                    {{Payment.addresship.neighborhood }}.
+                                    {{Payment.addresship.neighborhood }}
                                 </td>
-                                <td><strong>Código Postal:</strong> {{Payment.addresship.zip}}.</td>
+                                <td><strong>Código Postal:</strong> {{Payment.addresship.zip}}</td>
                             </tr>
                             </tbody>
                         </table>
@@ -67,13 +67,12 @@
                                                 </div>
                                             </md-input-container>
                                         </div>
-
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <div class="row">
                                                     <div class="col-md-6">
                                                         <md-input-container md-no-float class="md-block" ng-class="{ 'has-error': Form.cardExpiryM.$touched && Form.cardExpiryM.$invalid }">
-                                                            <input type="text" ng-model="Payment.parms.month" maxlength="2"
+                                                            <input type="text" ng-model="Payment.params.month" maxlength="2"
                                                                    id="cardExpirationMonth" placeholder="MM"
                                                                    data-checkout="cardExpirationMonth" required>
                                                             <div class="help-block" ng-messages="Form.cardExpiryM.$error" ng-if="Form.cardExpiryM.$touched">
