ajuste a carrito de compras

--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -25,6 +25,9 @@ p, span
   font-weight 400
   font font-size 'Poppins', sans-serif
 
+.sweet-alert p
+  font-weight 400
+
 md-input-container
   width 100%
 
