--- a/app/css/core/navs.styl
+++ b/app/css/core/navs.styl
@@ -19,10 +19,9 @@
     text-align center
     border-radius 30px
     background-color qtyCartClr
-    font-size 16px
-    top -15px
-    right 0
     font-size 13px
+    top -20px
+    left 15px
     width 20px
     height 20px
 
@@ -47,6 +46,8 @@
         border-left-color white
   .second-row
     padding 15px 0 0
+    .btn-outline-danger
+      margin-top 10px
     .dropdown
       margin-top 10px
     .md-input-container.md-icon-right
