--- a/app/css/main.css
+++ b/app/css/main.css
@@ -23,10 +23,9 @@ audio:not([controls]),
   text-align: center;
   border-radius: 30px;
   background-color: #ff9039;
-  font-size: 16px;
-  top: -15px;
-  right: 0;
   font-size: 13px;
+  top: -20px;
+  left: 15px;
   width: 20px;
   height: 20px;
 }
@@ -53,6 +52,9 @@ audio:not([controls]),
 }
 .three-rows-nav .second-row {
   padding: 15px 0 0;
+}
+.three-rows-nav .second-row .btn-outline-danger {
+  margin-top: 10px;
 }
 .three-rows-nav .second-row .dropdown {
   margin-top: 10px;
@@ -884,6 +886,9 @@ p,
 span {
   font-weight: 400;
   font: 16px 'Poppins', sans-serif;
+}
+.sweet-alert p {
+  font-weight: 400;
 }
 md-input-container {
   width: 100%;
