--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -1,5 +1,5 @@
 <div id="temp-checkout">
-    <div id="content-area">
+    <div class="content-area">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12 box-default" ng-if="Payment.shiping">
