--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -58,7 +58,7 @@
                                         </div>
                                     </a>
                                     <div class="box-footer">
-                                        <a class="btn btn-outline-default" ui-sref="product-detail({slug:product.slug})">
+                                        <a class="btn btn-outline-dark" ui-sref="product-detail({slug:product.slug})">
                                             Ver más
                                         </a>
                                         <button class="btn btn-danger"
