--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,41 +1,51 @@
-<section id="content-area" class="content-blog">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-9 col-sm-9">
-                <div class="content-pages" infinite-scroll='Post.getMorePosts()'
-                     infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
-                    <div class="">
-                        <h4 class="text-left">Noticias</h4>
-                        <hr class="dividerw">
-                        <div class="box-white col-sm-12 box-blog" ng-repeat="entry in Post.list">
-                            <a post-link="{ link: {url: entry.link, target: '_blank'} }"
-                               ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
-                                <div class="simple-header col-md-4 col-sm-4">
-                                    <div class="img-box" style="background-image: url('{{ entry.featuredImage.url }}')"></div>
-                                </div>
-                                <div class="blog-container col-md-8 col-sm-8">
-                                    <div class="height-title"><h4>{{ entry.title }}</h4></div>
-                                    <div class="height-summary"><p>{{ entry.excerpt| characters:200 }}</p></div>
-                                    <div class="box-footer">
-                                        <button class="btn btn-yellow1">Ver más <i class="fa fa-angle-right"></i></button>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-sm-12" ng-show="Post.busy">
-                            <h3 class="text-center">Cargando<i class="fa fa-spinner fa-spin"></i></h3>
-                        </div>
-                        <div class="col-sm-12" ng-show="!Post.busy">
-                            <h2 class="text-center no-content" ng-show="!Post.list.length">Lo sentimos no contamos con
-                                contenido disponible</h2>
-                        </div>
-                    </div>
-                    <!--post list -->
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-3 widgets">
-                <ng-include src="'/templates/partials/sidebar.html'"></ng-include>
-            </div>
+<div id="temp-blog">
+    <div class="header-title-large">
+        <div class="container">
+            <h1 class="text-uppercase">Noticias</h1>
         </div>
     </div>
-</section>
+    <section class="content-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9 col-sm-9">
+                    <div class="content-pages" infinite-scroll='Post.getMorePosts()'
+                         infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
+                        <div class="row">
+                            <div class="box-bordered col-sm-12 box-blog" ng-repeat="entry in Post.list">
+                                <a post-link="{ link: {url: entry.link, target: '_blank'} }"
+                                   ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
+                                    <div class="row">
+                                        <div class="box-header col-md-4 col-sm-4">
+                                            <div class="img-box"
+                                                 style="background-image: url('{{ entry.featuredImage.url ? entry.featuredImage.url : initConfig.img_default}}')"></div>
+                                        </div>
+                                        <div class="box-article col-md-8 col-sm-8">
+                                            <div class="height-title"><h4>{{ entry.title }}</h4></div>
+                                            <div class="height-summary"><p>{{ entry.excerpt| characters:200 }}</p></div>
+                                            <div class="box-footer">
+                                                <button class="btn btn-outline-danger">Ver más <i class="fa fa-angle-right"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-sm-12" ng-show="Post.busy">
+                                <h3 class="text-center">Cargando<i class="fa fa-spinner fa-spin"></i></h3>
+                            </div>
+                            <div class="col-sm-12" ng-show="!Post.busy">
+                                <h2 class="text-center no-content" ng-show="!Post.list.length">Lo sentimos no contamos
+                                    con
+                                    contenido disponible</h2>
+                            </div>
+                        </div>
+                        <!--post list -->
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3 widgets">
+                    <ng-include src="'/templates/partials/sidebar.html'"></ng-include>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
