--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,10 +1,10 @@
 <div class="temp-contact">
-    <div class="header-title-page">
+    <div class="header-title-large">
         <div class="container">
-            <h1 class="prod-title col-md-12">Contáctanos</h1>
+            <h1 class="text-uppercase">Contáctanos</h1>
         </div>
     </div>
-    <section id="content-area">
+    <section class="content-area">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -22,45 +22,43 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 items-dashboard">
                     <form class="form-horizontal" ng-submit="Contact.createNotification('CONTACT_FORM')"
                           ng-init="Contact.notification.subject = 'Formulario de contacto'">
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <div class="form-group">
-                                        <label for="name">Nombre *</label>
-
-                                        <input type="text" class="form-control" id="name" name="name"
+                                    <md-input-container md-no-float class="md-block">
+                                        <input type="text" id="name" name="name"
                                                placeholder="Nombre"
                                                required ng-model="Contact.notification.name">
-                                    </div>
+                                    </md-input-container>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label for="email">Email *</label>
-
-                                        <input type="email" class="form-control" id="email" name="email"
+                                    <md-input-container md-no-float class="md-block">
+                                        <input type="email" id="email" name="email"
                                                placeholder="Email" required
                                                ng-model="Contact.notification.email">
-                                    </div>
+                                    </md-input-container>
                                 </div>
                                 <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label for="phone">Teléfono *</label>
-                                        <input type="text" class="form-control" id="phone" name="phone"
-                                               placeholder="Teléfono" required ng-model="Contact.notification.phone">
-                                    </div>
+                                    <md-input-container md-no-float class="md-block">
+                                        <input type="text" id="phone" name="phone"
+                                               placeholder="Teléfono" required
+                                               ng-model="Contact.notification.phone">
+                                    </md-input-container>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-12">
-                            <label for="email">Escribe tu mensaje *</label>
-                            <textarea class="form-control" id="message" name="message" cols="10" rows="10"
-                                      placeholder="Escribe tu mensaje *" required
-                                      ng-model="Contact.notification.message"></textarea>
+                            <md-input-container class="md-block">
+                                <textarea class="form-control" id="message" name="message"
+                                          placeholder="Escribe tu mensaje *" required
+                                          ng-model="Contact.notification.message"
+                                          rows="5" md-select-on-focus></textarea>
+                            </md-input-container>
 
                             <div style="text-align: right;">
                                 <button type="submit" class="btn btn-danger" ng-disabled="Contact.busy">
@@ -70,11 +68,8 @@
 
                             </div>
                         </div>
+                    </form>
                 </div>
-                </form>
             </div>
-        </div>
-</div>
-</div>
-</section>
+    </section>
 </div>
