--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -12,7 +12,7 @@
         </nav>
     </div>
 </section>
-<section id="content-area" class="content-blog">
+<section class="content-area">
      <div class="container">
         <div class="row">
             <div class="col-md-9 col-sm-8">
@@ -25,6 +25,7 @@
                              class="pull-left img-responsive img-thumbnail margin10"/>
                     </div>
                     <article ng-bind-html="Post.detail.content | trustHtml"></article>
+
                     <!--gallery here-->
                     <div deckgrid class="deckgrid gallery" source="Post.detail.galleryImages">
                         <div class="a-card portfolio_content box-portfolio" data-wow-duration="2s">
