--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -107,7 +107,7 @@
                                         <div class="col-xs-12 col-md-6 text-right">
                                             <div style="margin-top: 30px;">
                                                 <img class="img-fluid"
-                                                     src="http://i76.imgup.net/accepted_c22e0.png">
+                                                     src="../../img/accepted_c22e0.png">
                                             </div>
                                         </div>
                                     </div>
