--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1500,6 +1500,17 @@ footer .contact-sty .download-app > i:hover {
   }
 }
 @media only screen and (max-width: 767px) {
+  .three-rows-nav .navbar {
+    padding: 10px 0;
+  }
+  .three-rows-nav .navbar .container {
+    padding: 0;
+  }
+  .three-rows-nav .navbar .container .navbar-collapse {
+    border-top: 1px solid #f5f5f5;
+    padding: 15px;
+    margin-top: 10px;
+  }
   .three-rows-nav .navbar-light .navbar-toggler {
     color: #fff;
     border-color: #fff;
@@ -1521,6 +1532,9 @@ footer .contact-sty .download-app > i:hover {
     top: -10px;
     z-index: 999;
   }
+  .three-rows-nav .second-row .nav > li > .shopping-cart {
+    top: 5px;
+  }
   .three-rows-nav .second-row .nav > li > .shopping-cart i {
     color: #fff;
     font-size: 38px;
@@ -1533,6 +1547,19 @@ footer .contact-sty .download-app > i:hover {
   .three-rows-nav .second-row .nav .btn-dark {
     background-color: transparent;
     border-color: transparent;
+  }
+  .slider-box .slider-img {
+    height: 100px;
+  }
+  .slider-box .owl-nav {
+    display: none;
+  }
+  .section-one .rounded-cicle {
+    margin-top: 15px;
+  }
+  .section-one p {
+    text-align: justify;
+    padding-right: 0;
   }
 }
 @media only screen and (min-width: 480px) and (max-width: 767px) {
