--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -3,10 +3,6 @@
 -- THEME BY TINGSYSTEMS --
 -------------------------*/
 
-input[type="reset"][disabled], input[type="submit"][disabled],
-html input[type="button"][disabled], button[disabled], .btn[disabled]
-  cursor not-allowed
-
 body
   background-color white
   color fontClr
@@ -24,6 +20,11 @@ strong
 p, span
   font-weight 400
   font font-size 'Poppins', sans-serif
+.xs-hidde
+  display none
+input[type="reset"][disabled], input[type="submit"][disabled],
+html input[type="button"][disabled], button[disabled], .btn[disabled]
+  cursor not-allowed
 
 .sweet-alert p
   font-weight 400
