--- a/app/css/layout/responsive.styl
+++ b/app/css/layout/responsive.styl
@@ -309,8 +309,23 @@
     p
       text-align justify
       padding-right 0
+  .temp-shopcart
+    .shopcart-description
+      font-size 14px
+    .shopcart-img
+      height 100px
+      background-size 50%
+      background-position center
+    h4
+      margin-bottom 15px
 
-  
+  #temp-cart-details
+    .details-prodpay
+      margin-bottom 15px 
+  .temp-dashboard
+    padding 0
+    .list-group
+      margin-bottom 25px
 /* Wide Mobile Layout: 480px. */
 
 @media only screen and (min-width: 480px) and (max-width: 767px)
