--- a/app/templates/auth/dashboard.html
+++ b/app/templates/auth/dashboard.html
@@ -7,10 +7,10 @@
                 </div>
                 <div class="col-md-9">
                     <div class="row justify-content-between">
-                        <div class="col-5">
+                        <div class="col-6 col-md-5">
                             <h5><i class="ion-person"></i> Mi cuenta: {{user.username}}</h5>
                         </div>
-                        <div class="col-3 text-right">
+                        <div class="col-6 col-md-3 text-right">
                             <a ui-sref="home" class="btn-outline-dark"> Ir a comprar!</a>
                         </div>
                     </div>
