--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -45,36 +45,28 @@
                     <div class="items-dashboard" ng-if="Payment.orderPaymentType === '8'">
                         <div class="container">
                             <div class="row">
-                                <form style="width: 100%;" role="form" name="Form" id="payment-form"
+                                <form id="pay" name="pay"
                                       ng-submit="Payment.processPaymentCard()" novalidate>
                                     <div class="col-xs-12">
-                                        <md-input-container md-no-float class="md-block" ng-class="{ 'has-error': Form.name.$touched && Form.name.$invalid }">
-                                            <input type="text" ng-model="Payment.params.name"  placeholder="Nombre del titular" id="cardholderName" 
-                                                data-checkout="cardholderName" required
-                                            >
+                                        <md-input-container md-no-float class="md-block">
+                                            <label>Nombre completo</label>
+                                            <input type="text" ng-model="Payment.params.name"  id="cardholderName"  data-checkout="cardholderName" required>
                                         </md-input-container>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <md-input-container md-no-float class="md-block" ng-class="{ 'has-error': Form.cardNumber.$touched && Form.cardNumber.$invalid }">
-                                                <input type="text" ng-model="Payment.params.cardNumber" id="cardNumber"
-                                                       maxlength="20" placeholder="Número de tarjeta"
-                                                       data-checkout="cardNumber" required>
-                                                <div class="help-block" ng-messages="Form.cardNumber.$error" ng-if="Form.cardNumber.$touched">
-                                                    <span ng-if="Payment.payment.card.number == undefined" class="input-group-addon"><i class="fa fa-credit-card"></i></span>
-                                                    <span ng-if="Payment.payment.card.number.substr(0,1)=='4'" class="input-group-addon"><i class="fa fa-cc-visa"></i></span>
-                                                    <span ng-if="Payment.payment.card.number.substr(0,1)=='5'" class="input-group-addon"><i class="fa fa-cc-mastercard"></i></span>
-                                                </div>
+                                            <md-input-container md-no-float class="md-block">
+                                                <label>Número de tarjeta</label>
+                                                <input type="text" ng-pattern="/^[0-9]*$/" md-maxlength="18" id="cardNumber" data-checkout="cardNumber" ng-model="Payment.params.cardNumber" required>
                                             </md-input-container>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <div class="row">
                                                     <div class="col-md-6">
-                                                        <md-input-container md-no-float class="md-block" ng-class="{ 'has-error': Form.cardExpiryM.$touched && Form.cardExpiryM.$invalid }">
-                                                            <input type="text" ng-model="Payment.params.month" maxlength="2"
-                                                                   id="cardExpirationMonth" placeholder="MM"
-                                                                   data-checkout="cardExpirationMonth" required>
+                                                        <md-input-container md-no-float class="md-block" >
+                                                            <label>Mes</label>
+                                                            <input type="text" md-maxlength="2" ng-pattern="/^[0-9]*$/" ng-model="Payment.params.month" id="cardExpirationMonth" data-checkout="cardExpirationMonth" required>
                                                             <div class="help-block" ng-messages="Form.cardExpiryM.$error" ng-if="Form.cardExpiryM.$touched">
                                                                 <span> Mes expiración</span>
                                                             </div>
@@ -82,12 +74,8 @@
                                                     </div>
                                                     <div class="col-md-6">
                                                         <md-input-container md-no-float class="md-block" ng-class="{ 'has-error': Form.cardExpiryY.$touched && Form.cardExpiryY.$invalid }">
-                                                            <input type="text" ng-model="Payment.params.year"
-                                                                maxlength="4" id="cardExpirationYear" placeholder="AAAA"
-                                                                required data-checkout="cardExpirationYear">
-                                                            <div class="help-block" ng-messages="Form.cardExpiryY.$error" ng-if="Form.cardExpiryY.$touched">
-                                                                <span> Año expiración</span>
-                                                            </div>
+                                                            <label>Año</label>
+                                                            <input type="text" md-maxlength="4" ng-pattern="/^[0-9]*$/" ng-model="Payment.params.year" id="cardExpirationYear" data-checkout="cardExpirationYear" required>
                                                         </md-input-container>
                                                     </div>
                                                 </div>
@@ -98,9 +86,8 @@
                                     <div class="row">
                                         <div class="col-xs-12 col-md-6">
                                             <md-input-container md-no-float class="md-block" ng-class="{ 'has-error': Form.cardCVC.$touched && Form.cardCVC.$invalid }">
-                                                <input type="text" ng-model="Payment.params.cvc"
-                                                    id="securityCode" placeholder="CVC" maxlength="5"
-                                                    required data-checkout="securityCode">
+                                                <label>CVC</label>
+                                                <input type="text" md-maxlength="3" ng-pattern="/^[0-9]*$/" ng-minlength="3" id="securityCode" data-checkout="securityCode" ng-model="Payment.params.cvc" required>
                                             </md-input-container>
                                         </div>
                                         <input type="hidden" id="paymentMethodId" data-checkout="paymentMethodId" ng-model="Payment.params.paymentMethodId" />
@@ -115,7 +102,9 @@
                                         <div class="row justify-content-md-end">
                                             <div class="">
                                                 <button ui-sref="shipping-address" class="btn btn-outline-default">Volver a dirección de envío</button>
-                                                <button ng-disabled="Form.$invalid" class="btn btn-danger" type="submit">Procesar Pago</button>
+                                                <button ng-disabled="Form.$invalid || Payment.creditCard" class="btn btn-danger" type="submit">
+                                                    Realizar Pago <span ng-show="Payment.creditCard"><i class="fa fa-spinner fa-spin"></i></span>
+                                                </button>
                                             </div>
                                         </div>
                                     </div>
