--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -2,7 +2,7 @@
     <div class="content-area">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-12 box-default" ng-if="Payment.shiping">
+                <div class="col-sm-12 col-md-12 box-default" ng-if="Payment.shipping === '0'">
                     <div class="container">
                         <h6><i class="fa fa-address-card"></i> Dirección de envío</h6>
                     </div>
