--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -5,16 +5,19 @@
                 <uib-tabset class="tab-simple" active="activeJustified" justified="true">
                     <uib-tab index="0" heading="Iniciar sesión">
                         <form class="padding" name="loginForm" novalidate ng-submit="Access.login()">
+
                             <md-input-container md-no-float ng-class="{ 'has-error': loginForm.username.$touched && loginForm.username.$invalid }">
+                                <label for="user">Nombre de usuario</label>
                                 <input type="text" ng-model="Access.formDataLogin.username" id="user" name="username"
-                                       placeholder="Nombre de usuario" required>
+                                       required>
                                 <div class="help-block" ng-messages="loginForm.username.$error" ng-if="loginForm.username.$touched">
                                     <div class="text-danger" ng-message="required">Ingrese el nombre de usuario</div>
                                 </div>
                             </md-input-container>
                             <md-input-container md-no-float ng-class="{ 'has-error': loginForm.password.$touched && loginForm.password.$invalid }">
+                                <label for="password">Contraseña</label>
                                 <input type="password" ng-model="Access.formDataLogin.password" id="password" name="password"
-                                       placeholder="Contraseña" required>
+                                       required>
                                     <div class="help-block" ng-messages="loginForm.password.$error" ng-if="loginForm.password.$touched">
                                         <div class="text-danger" ng-message="required">Ingrese la contraseña.</div>
                                     </div>
